GNOME Bugzilla – Bug 161404
looking for help documentation in wrong place ?
Last modified: 2005-01-16 22:15:14 UTC
/xmldocs.make and consequently /doc/C/Makefile contain docdir = $(datadir)/gnome/help/$(docname)/$(lang) i.e /usr/share/gnome/help/gnumeric/C so the help documentation by default ends up there while src/wbcg-actions.c calls yelp on gnm_sys_data_dir ("doc/C/gnumeric.xml"); which expands to /usr/share/gnumeric/1.4.1/doc/C
I confirmed this bug exists. Help will not pull up correctly from the help menu in Gnumeric. I created a symlink from $GNOME_PREFIX/share/gnumeric/1.4.1/doc -> $GNOME_PREFIX/share/gnome/help/gnumeric and yelp finds the help file just fine. This is not meant as a fix, but simply to confirm what Caolan has mentioned in the original report.
youch, thanks for spotting this. I've patched the xmldoc.make to agree with the code.