autogen.sh
@@ -32,4 +32,6 @@ if test -z "$gnome_autogen" ; then
   exit 1
 fi
 
-REQUIRED_AUTOMAKE_VERSION=1.7.2 GNOME_DATADIR="$gnome_datadir" USE_GNOME2_MACROS=1 USE_COMMON_DOC_BUILD=yes . $gnome_autogen
+# remove USE_COMMON_DOC_BUILD=yes
+#    so that we can customize the docdir
+REQUIRED_AUTOMAKE_VERSION=1.7.2 GNOME_DATADIR="$gnome_datadir" USE_GNOME2_MACROS=1 USE_COMMON_DOC_BUILD=no . $gnome_autogen
